Fixed spacing

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -40,7 +40,7 @@ header {
 
   body div.middle{
       display: flex;
-      margin-top: 65px;
+      margin-top: 100px;
       margin-left: 20px;
   }
 
